php-app/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: php-app
  labels:
    environment: prod
