php-app/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: php-app
  labels:
    environment: prod
    tier: frontend
    app.kubernetes.io/name: php-app
    app.kubernetes.io/instance: php-app
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: frontend
spec:
  replicas: 3
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      environment: prod
      tier: frontend
      app.kubernetes.io/name: php-app
      app.kubernetes.io/instance: php-app
      app.kubernetes.io/version: "1.0"
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        environment: prod
        tier: frontend
        app.kubernetes.io/name: php-app
        app.kubernetes.io/instance: php-app
        app.kubernetes.io/version: "1.0"
        app.kubernetes.io/component: frontend
    spec:
      serviceAccountName: php-app
      automountServiceAccountToken: false

      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: "OnRootMismatch"

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kuernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              environment: prod
              tier: frontend
              app.kubernetes.io/name: php-app
              app.kubernetes.io/instance: php-app
              app.kubernetes.io/version: "1.0"
              app.kubernetes.io/component: frontend

      containers:
        - name: php
          image: php@sha256:a05f87f7f1e3927b9f3a44d64c01dfe15992328fa179bdfa72ad06e66769ff57 #php:8.3-apache

          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 30
            periodSeconds: 5

          volumeMounts:
            - name: generated-index
              mountPath: /var/www/html

      volumes:
        - name: index-template
          configMap:
            name: index-template
        - name: generated-index
          emptyDir: {}
