php-app/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: php-app
  namespace: php-app
  labels:
    environment: prod
    tier: frontend
    app.kubernetes.io/name: php-app
    app.kubernetes.io/instance: php-app
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: frontend
spec:
  selector:
    environment: prod
    tier: frontend
    app.kubernetes.io/name: php-app
    app.kubernetes.io/instance: php-app
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: frontend

  ports:
    - port: 80
      targetPort: 80
