php-app/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app
  namespace: php-app
  labels:
    environment: prod
    tier: frontend
    app.kubernetes.io/name: php-app
    app.kubernetes.io/instance: php-app
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: frontend

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/sucess-codes: "200"

spec:
  ingressClassName: alb
  rules:
    - host: php-app.crabdance.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-app
                port:
                  number: 80
