php-app/NetworkPolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: php-app
  labels:
    environment: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alb-ingress-to-php-app
  namespace: php-app
  labels:
    environment: prod
    tier: frontend
    app.kubernetes.io/name: php-app
    app.kubernetes.io/instance: php-app
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: frontend
spec:
  podSelector:
    matchLabels:
      environment: prod
      tier: frontend
      app.kubernetes.io/name: php-app
      app.kubernetes.io/instance: php-app
      app.kubernetes.io/version: "1.0"
      app.kubernetes.io/component: frontend

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 80
  policyTypes:
    - Ingress
